--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -14,33 +14,37 @@
 {% endblock %}
 {% endcache %}
 
-{% with user.is_anonymous as user_is_anonymous %}
+{% comment %}
+For some reason the caching is not available when using user methods, so the validation
+about if the user is autheticated or not didn't work
+{% with user.is_authenticated as user_is_authenticated %}
+    {% cache cache_timeout index_cache_block_2 LANGUAGE_CODE user_is_authenticated %}
+{% endcomment %}
+        {% block content %}
 
-{% cache cache_timeout index_cache_block_2 LANGUAGE_CODE  user_is_anonymous %}
-{% block content %}
+            <div class="row" style="margin-top: -80px;">
+                <div class="span6">
+                    <p style="font-size: 2em;line-height:30px;font-weight:bold;color:#333;">The best way to carry your participative democracy in any field: politics,
+                        associations, citizen groups...</p>
+                    <h3 class="lead">e-cidadania provides a free service for making participative democracy
+                        through debates, proposals, voting systems... with automated reports of
+                        the process, file repositositories, RSS feeds...</h3>
+                    {% if not user.is_authenticated %}
+                        <div style="margin-left:60px;">
+                            <a href="{% url 'signup' %}" class="btn btn-success btn-large">{% trans "Sign up <i>-it's free!-</i>" %}</a> {% trans "or" %} <a href="{% url 'login' %}" class="btn btn-primary btn-large">{% trans "Log in" %}</a>
+                        </div>
+                    {% endif %}
+                </div>
+                <div class="span4" style="float:right;">
+                    <img src="{{ STATIC_URL }}/assets/logos/index_big.png" />
+                </div>
+            </div>
 
-<div class="row" style="margin-top: -80px;">
-    <div class="span6">
-        <p style="font-size: 2em;line-height:30px;font-weight:bold;color:#333;">The best way to carry your participative democracy in any field: politics,
-            associations, citizen groups...</p>
-        <h3 class="lead">e-cidadania provides a free service for making participative democracy
-            through debates, proposals, voting systems... with automated reports of
-            the process, file repositositories, RSS feeds...</h3>
-        {% if user_is_anonymous %}
-        <div style="margin-left:60px;">
-            <a href="{% url 'signup' %}" class="btn btn-success btn-large">{% trans "Sign up <i>-it's free!-</i>" %}</a> {% trans "or" %} <a href="{% url 'login' %}" class="btn btn-primary btn-large">{% trans "Log in" %}</a>
-        </div>
-        {% endif %}
-    </div>
-    <div class="span4" style="float:right;">
-        <img src="{{ STATIC_URL }}/assets/logos/index_big.png" />
-    </div>
-</div>
-
-{% endblock %}
-{% endcache %}
-
+        {% endblock %}
+{% comment %}
+    {% endcache %}
 {% endwith %}
+{% endcomment %}
 
 {% block freewidth %}
 
