--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -36,6 +36,7 @@ div.form-container form p.note {
     color: #666;
 }
 div.form-container form input,
+div.form-container form button,
 div.form-container form select,
 div.form-container form textarea {
     padding: 2px;
