--- a/src/apps/ecidadania/news/templates/news/post_form.html
+++ b/src/apps/ecidadania/news/templates/news/post_form.html
@@ -60,18 +60,18 @@ automatically if found in the data models.
                 {% endfor %}
             {% endif %}
 
-            <div class="control-group {% if form.post_title.errors %}error{% endif%}">
-                <label>{{ form.post_title.label }}</label>
+            <div class="control-group {% if form.title.errors %}error{% endif%}">
+                <label>{{ form.title.label }}</label>
                 <div class="controls">
                     <div class="input-append">
-                        {{ form.post_title }}
-                        {% if form.post_title.help_text %}
-                            <span class="add-on"><a href="#" rel="tooltip" title="{{ form.post_title.help_text }}"><i class="icon-question-sign"></i></a></span>
+                        {{ form.title }}
+                        {% if form.title.help_text %}
+                            <span class="add-on"><a href="#" rel="tooltip" title="{{ form.title.help_text }}"><i class="icon-question-sign"></i></a></span>
                         {% endif %}
                     </div>
-                    {% if form.post_title.errors %}
+                    {% if form.title.errors %}
                     <p class="help-block">
-                        {% for error in form.post_title.errors %}
+                        {% for error in form.title.errors %}
                         {{ error|escape }}
                         {% endfor %}
                     </p>
@@ -79,19 +79,19 @@ automatically if found in the data models.
                 </div>
             </div>
 
-            <div class="control-group {% if form.post_message.errors %}error{% endif%}">
-                <label>{{ form.post_message.label }}</label>
+            <div class="control-group {% if form.description.errors %}error{% endif%}">
+                <label>{{ form.description.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
-                        {{ form.post_message }}
-                        {% wysiwyg_editor "id_post_message" %}
-                        {% if form.post_message.help_text %}
-                            <span class="add-on"><a href="#" rel="tooltip" title="{{ form.post_message.help_text }}"><i class="icon-question-sign"></i></a></span>
+                        {{ form.description }}
+                        {% wysiwyg_editor "id_description" %}
+                        {% if form.description.help_text %}
+                            <span class="add-on"><a href="#" rel="tooltip" title="{{ form.description.help_text }}"><i class="icon-question-sign"></i></a></span>
                         {% endif %}
                     </div>
-                    {% if form.post_message.errors %}
+                    {% if form.description.errors %}
                     <p class="help-block">
-                        {% for error in form.post_message.errors %}
+                        {% for error in form.description.errors %}
                         {{ error|escape }}
                         {% endfor %}
                     </p>
