--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -31,7 +31,7 @@ body {
 	background: #FAFAFA;
 	padding: 0;
 	margin: 0;
-	font-family: Verdana, "Lucida Sans", Arial;
+	font-family: 'Duru Sans', Verdana, "Lucida Sans", Arial;
 	font-size: 12px;
 	color: #000;
 	cursor: default;
@@ -68,12 +68,6 @@ hr { /* This hr replaces the bootstrap one */
     vertical-align: middle;
     padding-left: 5px;
     color: #F00;
-}
-
-@font-face {
-    font-family: "SansationRegular";
-    src: url('http://www.fontsforweb.com/public/fonts/424/SansationRegular.eot');
-    src: local("Sansation"), url('http://www.fontsforweb.com/public/fonts/424/SansationRegular.ttf') format("truetype");
 }
 
 #logo {
