Updated Bootstrap to 2.1. Added Font Awesome for glyph icons. Started modification of the markup for font awesome

--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -39,33 +39,37 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Administration" %} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             {% if perms.news.add_post %}
-                                <li><a href="{% url 'add-post' get_place.url %}">
-                                    <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add new post' %}" title="{% trans 'Add new post' %}"/>{% trans 'Add new post' %}
+                                <li><a href="{% url 'add-post' get_place.url %}" title="{% trans 'Add new post' %}">
+                                    <i class="icon-plus" style="font-size:16px;"></i> {% trans 'Add new post' %}
                                 </a></li>
                             {% endif %}
+                            <li class="divider"></li>
                             {% if perms.spaces.change_space %}
-                                <li><a href="{% url 'edit-space' get_place.url %}">
-                                    <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit space' %}" title="{% trans 'Edit space' %}"/>{% trans 'Edit space' %}
+                                <li><a href="{% url 'edit-space' get_place.url %}" title="{% trans 'Edit space' %}">
+                                    <i class="icon-edit" style="font-size:16px;"></i> {% trans 'Edit space' %}
                                 </a></li>
-                                <li><a href="{% url 'edit-roles' get_place.url %}">
-                                    <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit user roles' %}" title="{% trans 'Edit user roles' %}"/>{% trans 'Edit user roles' %}
+                                <li><a href="{% url 'edit-roles' get_place.url %}" title="{% trans 'Edit user roles' %}">
+                                    <i class="icon-edit" style="font-size:16px;"></i> {% trans 'Edit user roles' %}
                                 </a></li>
-                                <li><a href="{% url 'add_fields' get_place.url %}">
-                                    <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add form field' %}" title="{% trans 'Add Form field'%}"/>{% trans 'Add form fields '%}
+                                {% if perms.spaces.delete_space %}
+                                <li><a href="{% url 'delete-space' get_place.url %}" title="{% trans 'Delete space' %}">
+                                    <i class="icon-trash" style="font-size:16px;"></i> {% trans 'Delete space' %}
                                 </a></li>
-                                <li><a href="{% url 'delete_fields' get_place.url %}">
-                                    <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete form field' %}" title="{% trans 'Delete form field'%}"/>{% trans 'Delete form field '%}
+                                {% endif %}
+                                <li class="divider"></li>
+                                <li><a href="{% url 'add_fields' get_place.url %}" title="{% trans 'Add form field'%}">
+                                    <i class="icon-plus" style="font-size:16px;"></i> {% trans 'Add form fields '%}
                                 </a></li>
-                            {% endif %}
-                            
-                            {% if perms.spaces.delete_space %}
-                                <li><a href="{% url 'delete-space' get_place.url %}">
-                                    <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete space' %}" title="{% trans 'Delete space' %}"/>{% trans 'Delete space' %}
+                                <li><a href="{% url 'delete_fields' get_place.url %}" title="{% trans 'Delete form field'%}">
+                                    <i class="icon-trash" style="font-size:16px;"></i> {% trans 'Delete form field '%}
                                 </a></li>
                             {% endif %}
                         </ul>
                     </li>
                 {% endif %}
+                <li class="pull-left">
+                    <a href="{% url 'space-feed' get_place.url %}"><i class="icon-rss" style="font-size:16px;"></i> RSS</a>
+                </li>
                 </ul>
                 <div id="my-tab-content" class="tab-content">
                 <div class="tab-pane active" id="overview">
@@ -185,13 +189,13 @@
                                 <h4 class="posttitle"><a href="{% url 'view-poll' get_place.url poll.id %}">{{ poll.question }}</a>
                                     {% if user_is_admin %}
                                        {% if perms.voting.change_poll %}
-                                            <a href="{% url 'edit-poll' get_place.url poll.id %}">
-                                                <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
+                                            <a href="{% url 'edit-poll' get_place.url poll.id %}" title="{% trans 'Edit' %}">
+                                                <i class="icon-edit" style="font-size:16px;"></i>
                                             </a>
                                         {% endif %}
                                         {% if perms.voting.delete_poll %}
-                                            <a href="{% url 'delete-poll' get_place.url poll.id %}">
-                                                <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
+                                            <a href="{% url 'delete-poll' get_place.url poll.id %}" title="{% trans 'Delete' %}">
+                                                <i class="icon-trash" style="font-size:16px;"></i>
                                             </a>
                                         {% endif %}
                                     {% endif %}                             
@@ -202,13 +206,13 @@
                                 <h4 class="posttitle"><a href="{% url 'view-voting' get_place.url voting.id %}">{{ voting.title }}</a>
                                     {% if user_is_admin %}
                                        {% if perms.voting.change_voting %}
-                                            <a href="{% url 'edit-voting' get_place.url voting.id %}">
-                                                <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
+                                            <a href="{% url 'edit-voting' get_place.url voting.id %}" title="{% trans 'Edit' %}">
+                                                <i class="icon-edit" style="font-size:16px;"></i>
                                             </a>
                                         {% endif %}
                                         {% if perms.voting.delete_voting %}
-                                            <a href="{% url 'delete-voting' get_place.url voting.id %}">
-                                                <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
+                                            <a href="{% url 'delete-voting' get_place.url voting.id %}" title="{% trans 'Delete' %}">
+                                                <i class="icon-trash" style="font-size:16px;"></i>
                                             </a>
                                         {% endif %}
                                     {% endif %}                             
@@ -220,15 +224,15 @@
                                 <h4>{% trans "Administration" %}</h4>
                                 {% if perms.voting.add_poll %}
                                     <ul class="unstyled">
-                                        <li><a href="{% url 'add-poll' get_place.url %}">
-                                            <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add new poll' %}" title="{% trans 'Add new poll' %}"/>{% trans 'Add new poll' %}
+                                        <li><i class="icon-plus" style="font-size:16px;"></i> <a href="{% url 'add-poll' get_place.url %}" title="{% trans 'Add new poll' %}">
+                                        º{% trans 'Add new poll' %}
                                         </a></li>
                                     </ul>
                                 {% endif %}
                                 {% if perms.voting.add_voting %}
                                     <ul class="unstyled">
-                                        <li><a href="{% url 'add-voting' get_place.url %}">
-                                            <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add new voting process' %}" title="{% trans 'Add new voting process' %}"/>{% trans 'Add new voting process' %}
+                                        <li><i class="icon-plus" style="font-size:16px;"></i> <a href="{% url 'add-voting' get_place.url %}" title="{% trans 'Add new voting process' %}">
+                                        {% trans 'Add new voting process' %}
                                         </a></li>
                                     </ul>
                                 {% endif %}
